fixed the position of the header and the footer and also dicreased the row height so that the whole page feets with no scrole in onn page (including the gap)

--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -49,7 +49,21 @@ html {
 
 .container {
   display: grid;
-  grid-template-rows: repeat(10, 10vh);
+  grid-template-rows: repeat(10, 9vh);
   gap: 1vh;
 }
 
+.footer{
+  display: grid;
+  justify-content: center;
+  grid-row: 10/11;
+  align-items: center;
+  margin-bottom: 2vh;
+}
+
+.header{
+  display: grid;
+  justify-content: center;
+  grid-row: 1/2;
+  align-items: center;
+}
